# elsaapi

./: .env.example  .gitignore  Dockerfile.consumer  Makefile  README.md  docker-compose.yml  pyproject.toml
elsa_crawler/: __init__.py  config.py  models.py
elsa_crawler/api/: __init__.py  app.py  routes.py
elsa_crawler/auth/: __init__.py  credentials.py
elsa_crawler/browser/: __init__.py  manager.py
elsa_crawler/cli/: __init__.py  __main__.py  main.py
elsa_crawler/crawler/: __init__.py  orchestrator.py  worker.py
elsa_crawler/extractors/: __init__.py  categories.py  documents.py  fieldsets.py  vehicle_history.py
elsa_crawler/storage/: __init__.py  __main__.py  kafka_consumer.py  kafka_producer.py  qdrant_cleaner.py  redis.py  sanitizer.py
